Update and rename 0000-01-06-verifying-cleaning.md to 0000-01-06-identify.md

--- a/_posts/0000-01-06-identify.md
+++ b/_posts/0000-01-06-identify.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Verifying & Cleaning"
+title:  "Identifying skill sets needed"
 ---
 
 - Do you trust / understand the methodology of the data collection? (particularly if you are working with data collected by others)
